@@ -139,6 +139,7 @@ importFrom(knitr,knit_print)
 importFrom(knitr,opts_current)
 importFrom(knitr,opts_knit)
 importFrom(officer,add_slide)
+importFrom(officer,block_caption)
 importFrom(officer,body_add_par)
 importFrom(officer,body_add_xml)
 importFrom(officer,cursor_bookmark)
@@ -151,7 +152,9 @@ importFrom(officer,ph_location_type)
 importFrom(officer,ph_with)
 importFrom(officer,read_docx)
 importFrom(officer,read_pptx)
+importFrom(officer,run_autonum)
 importFrom(officer,shortcuts)
+importFrom(officer,to_wml)
 importFrom(officer,wml_link_images)
 importFrom(rlang,enquo)
 importFrom(rlang,eval_tidy)
@@ -173,6 +176,7 @@ importFrom(utils,browseURL)
 importFrom(utils,getFromNamespace)
 importFrom(utils,head)
 importFrom(utils,tail)
+importFrom(uuid,UUIDgenerate)
 importFrom(xml2,"xml_attr<-")
 importFrom(xml2,as_xml_document)
 importFrom(xml2,xml_attr)
