@@ -8,7 +8,7 @@
 #' option 'Allow row to break across pages'.
 #' @param pos where to add the flextable relative to the cursor,
 #' one of "after", "before", "on" (end of line).
-#' @importFrom officer body_add_xml wml_link_images docx_reference_img
+#' @importFrom officer body_add_xml wml_link_images docx_reference_img block_caption
 #' @examples
 #' library(officer)
 #' ftab <- flextable(head(mtcars))
@@ -22,6 +22,13 @@
 body_add_flextable <- function( x, value, align = "center", pos = "after", split = FALSE) {
 
   stopifnot(inherits(x, "rdocx"))
+
+  if(!is.null(value$caption$value)){
+    bc <- block_caption(label = value$caption$value,
+                        style = value$caption$style,
+                        id = value$caption$ref, autonum = value$caption$autonum)
+    x <- body_add_xml(x = x, str = to_wml(bc, base_document = x, add_ns = TRUE), pos = pos)
+  }
 
   out <- docx_str(value, doc = x, align = align, split = split)
 
